--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,5 @@
-baseURL = "http://example.org/"
+baseURL = "https://parakeety.github.io/hugo-blog"
 languageCode = "en-us"
 title = "My New Hugo Site"
 theme = "ananke"
+publishDir = "docs"
