--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 baseURL = "https://parakeety.github.io/hugo-blog"
 languageCode = "en-us"
 title = "My New Hugo Site"
-theme = "ananke"
+theme = "pickles"
 publishDir = "docs"
