Change to github pages for user & organization

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,7 @@
 [submodule "themes/pickles"]
 	path = themes/pickles
 	url = https://github.com/mismith0227/hugo_theme_pickles
+[submodule "public"]
+	path = public
+	url = git@github.com:parakeety/parakeety.github.io.git
+	branch = master
