--- a/config.toml
+++ b/config.toml
@@ -1,8 +1,6 @@
-baseURL = "https://parakeety.github.io/hugo-blog/"
 languageCode = "ja-jp"
 title = "Parakeety's Blog"
 theme = "pickles"
-publishDir = "docs"
 
 [params]
   paginate = 10
@@ -10,4 +8,4 @@ publishDir = "docs"
   author = "parakeety"
   authorwebsite = "http://www.parakeety.com/"
   bio = "Software Engineer at Mercari"
-  subtitle = "iOS, Web, and Cryptocurrency"
+  subtitle = "iOS, Golang, and Cryptocurrency"
