Set google analytics tracking id to themes params

--- a/config.toml
+++ b/config.toml
@@ -2,7 +2,6 @@ languageCode = "ja-jp"
 title = "Parakeety's Blog"
 theme = "pickles"
 baseURL = "https://parakeety.github.io/"
-googleAnalytics = "{UA-64117421-1}"
 
 [params]
   paginate = 10
@@ -12,3 +11,4 @@ googleAnalytics = "{UA-64117421-1}"
   authorwebsite = "http://www.parakeety.com/"
   bio = "Software Engineer at Mercari"
   subtitle = "iOS, Golang, and Cryptocurrency"
+  ga_api_key = "UA-64117421-1"
